--- a/src/css/login.scss
+++ b/src/css/login.scss
@@ -1,16 +1,12 @@
-@import "./variables.scss";
+@import './variables.scss';
 
-
-#twitch_login{
-
-    background-color: var(--purple-dark);
-    color: var(--white);
-    padding: 10px;
-    border-radius: 5px;
-    border: none;
-    width: 80%;
-    display: block;
-    margin: 150px auto;
-    
+#twitch_login {
+   background-color: var(--purple-dark);
+   color: var(--white);
+   padding: 10px;
+   border-radius: 5px;
+   border: none;
+   width: 80%;
+   display: block;
+   margin: 150px auto;
 }
-
