--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1,49 +1,114 @@
-@import "./variables.scss";
+@import './variables.scss';
 
-body{
-    background-color: var(--purple-dark);
+* {
+   box-sizing: border-box;
 }
 
-.app-container{
-    width: 40vw;
-    margin: 15vh auto;
-    background-color:  var(--black);
-    border-radius: 10px;
-    padding: 10px;
-    min-height: 400px;
-
+html {
+   overflow: hidden;
+   height: 100%;
 }
 
-form{
-    display: grid;
-    margin: 20px auto;
-    justify-content: center;
-    align-items: center;
-
+body {
+   background-color: var(--purple-dark);
+   margin: 0;
+   overflow: auto;
+   height: 100%;
 }
 
-form input{
-    background-color: #7e7394;
-    color:var(--white);
-    padding: 5px;
-    border: none;
-    border-radius: 5px;
-    margin: 10px 0;
+#app-wrapper {
+   display: grid;
+   grid-template-columns: repeat(auto-fit, minmax(230px, 30vw) minmax(230px, 1fr));
+   gap: 3px;
 }
 
-form button{
-    background-color: var(--purple-dark);
-    padding: 10px;
-    color: white;
-    border: none;
-    border-radius: 5px;
+.side-bar-container {
+   margin: 0;
+   background-color: var(--black);
+   padding: 10px;
+   height: 100vh;
+   position: sticky;
+   top: 0;
 }
 
-.avatarImage{
-    border: solid 10px var(--purple-light);
-    border-radius: 50%;
-    max-width: 200px;
-    max-height: 200px;
-    margin: 40px auto;
-    display: block;
+form {
+   display: grid;
+   margin: 20px auto;
+   justify-content: center;
+   align-items: center;
+   position: relative;
+}
+
+input:hover + ul,
+input:focus + ul {
+   display: block;
+   opacity: 1;
+}
+
+form input {
+   background-color: #7e7394;
+   color: var(--white);
+   padding: 5px;
+   border: none;
+   border-radius: 5px;
+   margin-top: 10px;
+}
+
+form button {
+   background-color: var(--purple-dark);
+   padding: 10px;
+   color: white;
+   border: none;
+   border-radius: 5px;
+   margin-top: 5px;
+}
+
+.avatarImage {
+   border: solid 10px var(--purple-light);
+   border-radius: 50%;
+   max-width: 200px;
+   max-height: 200px;
+   margin: 40px auto;
+   display: block;
+}
+
+#cards-container {
+   display: grid;
+   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+   grid-template-rows: repeat(auto-fit, 1fr);
+   gap: 5px;
+   //align-items: start;
+}
+
+.sugerencia {
+   background-color: #7e7394;
+   color: var(--white);
+   border: none;
+   border-radius: 5px;
+   margin: 0;
+   list-style: none;
+   text-align: left;
+   position: relative;
+   display: grid;
+   padding: 0;
+   opacity: 0;
+   display: none;
+}
+
+.sugerencia:hover {
+   display: block;
+   opacity: 1;
+}
+
+.sugerencia li {
+   padding-left: 5px;
+}
+
+.sugerencia li:hover {
+   background-color: var(--purple-dark);
+   cursor: pointer;
+}
+
+.input-wrapper {
+   height: 50px;
 }
